--- a/style.css
+++ b/style.css
@@ -5,10 +5,12 @@
 }
 
 .logo-principal {
+    margin-top: -620px;
     height: 130px;
 }
 
 .mario-luigi {
+    margin-top: -100px;
     height: 300px;
 }
 
